welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:4: error: not found: value isFcaingTrail
    if (isFcaingTrail) {
        ^